Change name variables

--- a/src/vboa/templates/general_view_alerts/general_view_alerts.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts.html
@@ -1,13 +1,8 @@
 {% extends "panel/index.html" %}
 
-{% set sources_alerts = sources|rejectattr("alerts", "equalto", [])|map(attribute="alerts")|list|flatten %}
-{% set events_alerts = events|rejectattr("alerts", "equalto", [])|map(attribute="alerts")|list|flatten %}
-{% set annotations_alerts = annotations|rejectattr("alerts", "equalto", [])|map(attribute="alerts")|list|flatten %}
-{% set reports_alerts = reports|rejectattr("alerts", "equalto", [])|map(attribute="alerts")|list|flatten %}
-{% set ers_alerts = ers|rejectattr("alerts", "equalto", [])|map(attribute="alerts")|list|flatten %}
-{% set alerts = sources_alerts + events_alerts + annotations_alerts + reports_alerts + ers_alerts %}
+{% set alerts = source_alerts + event_alerts + annotation_alerts + report_alerts + er_alerts %}
 
-{% set number_of_elements = [sources_alerts|length, events_alerts|length, annotations_alerts|length, reports_alerts|length, ers_alerts|length]|max %}
+{% set number_of_elements = [source_alerts|length, event_alerts|length, annotation_alerts|length, report_alerts|length, er_alerts|length]|max %}
 
 {% block content %}
 <div class="row">
