--- a/src/vboa/templates/general_view_alerts/general_view_alerts_events_content.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_events_content.html
@@ -1,4 +1,4 @@
-{% if events_alerts|length > 0 %}
+{% if event_alerts|length > 0 %}
 <div class="row">
   <div class="panel panel-default">
     <div class="panel-heading">
@@ -19,7 +19,7 @@
       <br/>
 
       <table width="100%" class="table table-striped table-bordered table-hover table-search" id="associated-general-view-alerts-events-details-table">
-        {% with alerts = events_alerts %}
+        {% with alerts = event_alerts %}
         {% include "general_view_alerts/general_view_alerts_events_table_content.html" %}
         {% endwith %}
       </table>
