--- a/src/vboa/templates/general_view_alerts/general_view_alerts_reports_content.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_reports_content.html
@@ -1,4 +1,4 @@
-{% if reports_alerts|length > 0 %}
+{% if report_alerts|length > 0 %}
 <div class="row">
   <div class="panel panel-default">
     <div class="panel-heading">
@@ -19,7 +19,7 @@
       <br/>
 
       <table width="100%" class="table table-striped table-bordered table-hover table-search" id="associated-general-view-alerts-reports-details-table">
-        {% with alerts = reports_alerts %}
+        {% with alerts = report_alerts %}
         {% include "general_view_alerts/general_view_alerts_reports_table_content.html" %}
         {% endwith %}
       </table>
