--- a/src/vboa/templates/general_view_alerts/general_view_alerts_scripts.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_scripts.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   {% if alerts|length > 0 %}
-  {% with sources_alerts=sources_alerts, events_alerts=events_alerts, annotations_alerts=annotations_alerts, reports_alerts=reports_alerts, ers_alerts=ers_alerts %}
+  {% with source_alerts=source_alerts, event_alerts=event_alerts, annotation_alerts=annotation_alerts, report_alerts=report_alerts, er_alerts=er_alerts %}
   {% include "graphs/alerts_to_json_for_timeline.js" %}
   {% endwith %}
   vboa.create_alert_timeline(alerts, "timeline-general-view-alerts");
@@ -11,6 +11,6 @@
   "window_size": "{{ sliding_window['window_size'] }}",
   }
   var repeat_cycle = {{ sliding_window['repeat_cycle'] }}
-  vboa.update_view(parameters, repeat_cycle, "/sliding-general-view-alerts-parameters");
+  vboa.update_view(parameters, repeat_cycle, "general-view-alerts/sliding-general-view-alerts-parameters");
   {% endif %}
 </script>
