--- a/src/vboa/templates/general_view_alerts/general_view_alerts_sources_content.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_sources_content.html
@@ -1,4 +1,4 @@
-{% if sources_alerts|length > 0 %}
+{% if source_alerts|length > 0 %}
 <div class="row">
   <div class="panel panel-default">
     <div class="panel-heading">
@@ -19,7 +19,7 @@
       <br/>
 
       <table width="100%" class="table table-striped table-bordered table-hover table-search" id="associated-general-view-alerts-sources-details-table">
-        {% with alerts = sources_alerts %}
+        {% with alerts = source_alerts %}
         {% include "general_view_alerts/general_view_alerts_sources_table_content.html" %}
         {% endwith %}
       </table>
