Add event alerts to eboa nav

--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -194,7 +194,8 @@
               </div>
             </div>
             <div>
-              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="events-submit-button">Query</button>
+              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="events-submit-button" name="query_events">Query events</button>
+	            <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="event-alerts-submit-button" name="query_event_alerts">Query event alerts</button>
             </div>
           </form>
         </div>
