Add eboa nav annotation alerts

--- a/src/vboa/templates/eboa_nav/query_annotations_content.html
+++ b/src/vboa/templates/eboa_nav/query_annotations_content.html
@@ -147,7 +147,8 @@
               </div>
             </div>
             <div>
-              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="annotations-submit-button">Query</button>
+              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="annotations-submit-button" name="query_annotations">Query annotations</button>
+	            <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="annotation-alerts-submit-button" name="query_annotation_alerts">Query annotation alerts</button>
             </div>
           </form>
         </div>
