Add eboa nav annotation alerts

--- a/src/vboa/templates/eboa_nav/alerts_nav_content.html
+++ b/src/vboa/templates/eboa_nav/alerts_nav_content.html
@@ -19,7 +19,7 @@
   <!-- /.panel-body -->
 </div>
 <!-- /.panel -->
-{% if show["timeline"] %}
+<!-- Timeline -->
 <div class="panel panel-default">
   <div class="panel-heading">
     Timeline of alerts
@@ -32,7 +32,6 @@
   <!-- /.panel-body -->
 </div>
 <!-- /.panel -->
-{% endif %}
 {% else %}
 <div class="panel panel-default">
   <div class="panel-heading">
