--- a/src/vboa/templates/eboa_nav/annotation_alerts_nav.html
+++ b/src/vboa/templates/eboa_nav/annotation_alerts_nav.html
@@ -1,3 +1,5 @@
+{% extends "eboa_nav/eboa_nav.html" %}
+
 {% set alerts_html_table_file = "general_view_alerts/general_view_alerts_annotations_table_content.html" %}
 {% block li_active_annotations %}class="active"{% endblock %}
 {% block div_active_annotations %}active{% endblock %}
