Add eboa nav sources alerts

--- a/src/vboa/templates/eboa_nav/query_sources_content.html
+++ b/src/vboa/templates/eboa_nav/query_sources_content.html
@@ -227,7 +227,8 @@
               </div>
             </div>
             <div>
-              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="sources-submit-button">Query</button>
+              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="sources-submit-button" name="query_sources">Query sources</button>
+	            <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="source-alerts-submit-button" name="query_source_alerts">Query source alerts</button>
             </div>
           </form>
         </div>
