--- a/src/vboa/templates/eboa_nav/query_explicit_references_content.html
+++ b/src/vboa/templates/eboa_nav/query_explicit_references_content.html
@@ -290,7 +290,8 @@
               </div>
             </div>
             <div>
-              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="explicit-refs-submit-button">Query</button>
+              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="explicit-refs-submit-button" name="query_explicit_refs">Query explicit references</button>
+	            <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="explicit-ref-alerts-submit-button" name="query_explicit_ref_alerts">Query explicit reference alerts</button>
             </div>
           </form>
         </div>
