Refactor page to allow having a project header

--- a/src/vboa/static/css/vboa.css
+++ b/src/vboa/static/css/vboa.css
@@ -3,6 +3,20 @@ h3.panel-title {
     display: inline-block;
 }
 
+.page-actions {
+  padding: 0 15px;
+  min-height: 15px;
+  background-color: #f8f8f8;
+}
+@media (min-width: 768px) {
+  .page-actions {
+    position: inherit;
+    margin: 0 0 0 250px;
+    padding: 0 30px;
+    border-left: 1px solid #e7e7e7;
+  }
+}
+
 .panel-index {
     margin-top: 5px;
     margin-right: 5px;
