--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -28,31 +28,24 @@
     </div>    
     <div id="updating-page">
     </div>
+    <div>{% block project_header %}{% endblock %}</div>
     <div id="wrapper">
       <!-- Navigation bar -->
       <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <!-- Title -->
         <div class="navbar-header">
           <!-- Button for showing the side options when navigating through the phone -->
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <!--button id="sidbar-collapse" type="button" data-toggle="collapse" data-target=".sidebar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
+          </button-->
           <div  class="navbar-brand">
             <div style="display:inline"><a href="{{ url_for('static', filename='images/boa_favicon.png') }}"><img src="{{ url_for('static', filename='images/boa_favicon_40x45.png') }}"/></a></div>
             <div style="display:inline"><a href="/">{% block project_version %}BOA 1.0.0{% endblock %}</a></div>
           </div>
         </div>
-        <div id="time-clock">
-        </div>
-        {% block save_page_link %}
-        <div class="nav navbar-text" id="save-page">
-          <button type="button" class="btn btn-primary" onclick="vboa.save_screenshot('SCREENSHOT_PAGE', 'Group for saving screenshots of the web page')">Save screenshot of this page as a report</button>
-        </div>
-        {% endblock %}
-        <div class="nav navbar-text">{% block project_header %}{% endblock %}</div>
         <!-- /.navbar-header -->
         <!-- User menu -->
         <ul class="nav navbar-top-links navbar-right">
@@ -74,7 +67,7 @@
           <!-- /.dropdown -->
         </ul>
         <!-- /.navbar-top-links -->
-        <div class="navbar-default sidebar" role="navigation">
+        <div class="navbar-default sidebar collapse in" role="navigation">
           <div class="sidebar-nav navbar-collapse" id="navbar-left-side-menu">
             <ul class="nav" id="left-side-menu">
               <li id="boa-management-menu-li">
@@ -164,6 +157,16 @@
         </div>
         <!-- /.navbar-static-side -->
       </nav>
+      <div id="page-actions" class="page-actions">
+        <div class="col-xs-6">
+          {% block save_page_link %}
+          <div id="save-page">
+            <button type="button" class="btn btn-primary" onclick="vboa.save_screenshot('SCREENSHOT_PAGE', 'Group for saving screenshots of the web page')">Save screenshot of this page as a report</button>
+          </div>
+          {% endblock %}
+        </div>
+        <div style="text-align:right" id="time-clock"></div>
+      </div>
       <div id="page-wrapper">
         {% block content %}{% endblock %}
       </div>
