Fix error in explicit ref alerts' timeline

--- a/src/vboa/templates/eboa_nav/explicit_reference_alerts_nav.html
+++ b/src/vboa/templates/eboa_nav/explicit_reference_alerts_nav.html
@@ -1,6 +1,6 @@
 {% extends "eboa_nav/eboa_nav.html" %}
 
-{% set event_alerts = alerts %}
+{% set er_alerts = alerts %}
 {% set alerts_html_table_file = "general_view_alerts/general_view_alerts_explicit_refs_table_content.html" %}
 {% block li_active_explicit_references %}class="active"{% endblock %}
 {% block div_active_explicit_references %}active{% endblock %}
