--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -34,16 +34,13 @@
       <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
         <!-- Title -->
         <div class="navbar-header">
-          <!-- Button for showing the side options when navigating through the phone -->
-          <!--button id="sidbar-collapse" type="button" data-toggle="collapse" data-target=".sidebar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button-->
           <div  class="navbar-brand">
-            <div style="display:inline"><a href="{{ url_for('static', filename='images/boa_favicon.png') }}"><img src="{{ url_for('static', filename='images/boa_favicon_40x45.png') }}"/></a></div>
+            <div style="display:inline"><a href="{{ url_for('static', filename='images/boa_favicon.png') }}"><img src="{{ url_for('static', filename='images/boa_favicon_31x35.png') }}"/></a></div>
             <div style="display:inline"><a href="/">{% block project_version %}BOA 1.0.0{% endblock %}</a></div>
+            <!-- Button for showing/hiding the side panel -->
+            <a href="#" id="sidbar-collapse" type="button">
+              <i style="margin:10px" class="fa fa-bars"></i>
+            </a>
           </div>
         </div>
         <!-- /.navbar-header -->
@@ -67,7 +64,7 @@
           <!-- /.dropdown -->
         </ul>
         <!-- /.navbar-top-links -->
-        <div class="navbar-default sidebar collapse in" role="navigation">
+        <div id="sidebar" class="navbar-default sidebar collapse in" role="navigation">
           <div class="sidebar-nav navbar-collapse" id="navbar-left-side-menu">
             <ul class="nav" id="left-side-menu">
               <li id="boa-management-menu-li">
@@ -157,7 +154,7 @@
         </div>
         <!-- /.navbar-static-side -->
       </nav>
-      <div id="page-actions" class="page-actions">
+      <div id="page-actions" class="page-actions shrink-expand-content">
         <div class="col-xs-6">
           {% block save_page_link %}
           <div id="save-page">
@@ -167,7 +164,7 @@
         </div>
         <div style="text-align:right" id="time-clock"></div>
       </div>
-      <div id="page-wrapper">
+      <div id="page-wrapper" class="shrink-expand-content">
         {% block content %}{% endblock %}
       </div>
       <!-- /#page-wrapper -->
