Add rboa nav report alerts

--- a/src/vboa/templates/rboa_nav/query_reports_content.html
+++ b/src/vboa/templates/rboa_nav/query_reports_content.html
@@ -156,7 +156,8 @@
               </div>
             </div>
             <div>
-              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="reports-submit-button">Query</button>
+              <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="reports-submit-button" name="query_reports">Query reports</button>
+	            <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="report-alerts-submit-button" name="query_report_alerts">Query report alerts</button>
             </div>
           </form>
         </div>
