--- a/src/vboa/templates/eboa_nav/event_duration.html
+++ b/src/vboa/templates/eboa_nav/event_duration.html
@@ -1,7 +1,7 @@
 <div class="col-xs-3">
   <label>Event duration (seconds)</label>
   <div class="input-group" style="width: 100%">
-    <input style="width: 80%" type="text" class="form-control"  name="event_duration" id="event-duration-input"/>
+    <input style="width: 80%" type="text" class="form-control"  name="event_duration" id="event-duration-text"/>
     <select class="form-control" style="padding-left: 0; width: 20%" name="event_duration_operator" id="event-duration-operator">
       {% include "eboa_nav/operators.html" %}
     </select>
