--- a/src/vboa/templates/eboa_nav/annotation_alerts_nav.html
+++ b/src/vboa/templates/eboa_nav/annotation_alerts_nav.html
@@ -1,6 +1,7 @@
 {% extends "eboa_nav/eboa_nav.html" %}
 
 {% set alerts_html_table_file = "general_view_alerts/general_view_alerts_annotations_table_content.html" %}
+{% set route_pagination = "/eboa_nav/query-alerts-pages" %}
 {% block li_active_annotations %}class="active"{% endblock %}
 {% block div_active_annotations %}active{% endblock %}
 {% block annotations_nav_content %}
@@ -14,6 +15,6 @@
 {% block scripts %}
 {{ super() }}
 {% with annotation_alerts=alerts%}
-{% include "eboa_nav/alerts_nav_scripts.html" %}
+{% include "general_view_alerts/general_view_alerts_scripts.html" %}
 {% endwith %}
 {% endblock %}
