--- a/src/vboa/templates/eboa_nav/event_alerts_nav.html
+++ b/src/vboa/templates/eboa_nav/event_alerts_nav.html
@@ -1,7 +1,7 @@
 {% extends "eboa_nav/eboa_nav.html" %}
 
-{% set event_alerts = alerts %}
 {% set alerts_html_table_file = "general_view_alerts/general_view_alerts_events_table_content.html" %}
+{% set route_pagination = "/eboa_nav/query-alerts-pages" %}
 {% block li_active_events %}class="active"{% endblock %}
 {% block div_active_events %}active{% endblock %}
 {% block events_nav_content %}
@@ -15,6 +15,6 @@
 {% block scripts %}
 {{ super() }}
 {% with event_alerts=alerts%}
-{% include "eboa_nav/alerts_nav_scripts.html" %}
+{% include "general_view_alerts/general_view_alerts_scripts.html" %}
 {% endwith %}
 {% endblock %}
