--- a/src/vboa/templates/rboa_nav/report_alerts_nav.html
+++ b/src/vboa/templates/rboa_nav/report_alerts_nav.html
@@ -1,7 +1,7 @@
 {% extends "rboa_nav/rboa_nav.html" %}
 
-{% set report_alerts = alerts %}
 {% set alerts_html_table_file = "general_view_alerts/general_view_alerts_reports_table_content.html" %}
+{% set route_pagination = "/rboa_nav/query-alerts-pages" %}
 {% block li_active_reports %}class="active"{% endblock %}
 {% block div_active_reports %}active{% endblock %}
 {% block reports_nav_content %}
@@ -9,66 +9,12 @@
   <a href="/rboa_nav/query-reports"><p class="fa fa-chevron-left"> Back to query reports</p></a>
 </div>
 <!-- Content -->
-<!-- Pagination -->
-{% with route = "/rboa_nav/query-alerts-pages", elements = alerts, filters = filters %}
-{% include "vboa/pagination.html" %}
-{% endwith %}
-
-{% if alerts|length > 0 %}
-<div class="panel panel-default">
-  <div class="panel-heading">
-    Table of alerts
-  </div>
-  <!-- /.panel-heading -->
-  <div class="panel-body">
-    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="alerts-table">
-    {% with alerts = alerts %}
-    {% include alerts_html_table_file %}
-    {% endwith %}
-    </table>
-  </div>
-  <!-- /.panel-body -->
-</div>
-<!-- /.panel -->
-<!-- Timeline -->
-<div class="panel panel-default">
-  <div class="panel-heading">
-    Timeline of alerts
-  </div>
-  <!-- /.panel-heading -->
-  <div class="panel-body">
-    <div id="alerts-nav-timeline">
-    </div>
-  </div>
-  <!-- /.panel-body -->
-</div>
-<!-- /.panel -->
-{% else %}
-<div class="panel panel-default">
-  <div class="panel-heading">
-    Table of alerts
-  </div>
-  <div id="alerts-nav-no-data">
-    <br/>
-    <p style="text-indent: 1em">No "alerts" have been found with the requested filters.</p>
-    <br/>
-  </div>
-  <!-- /.panel-body -->
-</div>
-<!-- /.panel -->
-{% endif %}
+{% include "eboa_nav/alerts_nav_content.html" %}
 {% endblock %}
 <!-- Scripts -->
 {% block scripts %}
 {{ super() }}
 {% with report_alerts=alerts%}
-<script type="text/javascript">
-    {% if alerts|length > 0 %}
-    {% with source_alerts=source_alerts, event_alerts=event_alerts, annotation_alerts=annotation_alerts, report_alerts=report_alerts, er_alerts=er_alerts %}
-    {% include "graphs/alerts_to_json_for_timeline.js" %}
-    {% endwith %}
-    vboa.create_alert_timeline(alerts, "alerts-nav-timeline");
-    {% endif %}   
-</script>
+{% include "general_view_alerts/general_view_alerts_scripts.html" %}
 {% endwith %}
 {% endblock %}
