Add test for event duration field

--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -144,10 +144,10 @@
             <div id="more-start-stop-query-events">
             </div>
             <!-- Event duration -->
-            <div class="row" id="events-duration-initial">
+            <div class="row" id="events-event-duration-initial">
               {% include "eboa_nav/event_duration.html" %}
               <div>
-                <span onclick="vboa.add_event_duration('more-event-duration-query-events')" id="events-add-duration">
+                <span onclick="vboa.add_event_duration('more-event-duration-query-events')" id="events-add-event-duration">
                   <span class="glyphicon glyphicon-plus"></span>
                 </span>
               </div>
