Add first draft for quering event alerts using specific alerts filters in eboa_nav

--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -4,6 +4,8 @@
       <div class="row">
         <div class="col-xs-12">
           <form role="form" method=post action="/eboa_nav/query-events">
+            <!-- Alert filters -->
+            {% include "eboa_nav/query_alerts_content.html" %}
             <!-- Sources -->
             <div class="row">
               <div class="col-xs-3">
