Fix name div class for ingestion completeness

--- a/src/vboa/templates/eboa_nav/query_sources_content.html
+++ b/src/vboa/templates/eboa_nav/query_sources_content.html
@@ -156,7 +156,7 @@
             </div>
             <!-- Ingestion completeness -->
             <div class="row">
-              <div class="col-xs-3 query-source-statuses">
+              <div class="col-xs-3 query-source-ingestion-completeness">
                 <label>Ingestion completeness</label>
                 <select style="width: 100%" name="ingestion_completeness" id="sources-ingestion-completeness">
                   <option></option>
