--- a/src/vboa/templates/rboa_nav/query_reports_content.html
+++ b/src/vboa/templates/rboa_nav/query_reports_content.html
@@ -113,7 +113,7 @@
             <div id="more-triggering-time-query-reports">
             </div>
             <div class="row" id="reports-statuses-initial">
-              <div class="col-xs-3">
+              <div class="col-xs-3 query-report-statuses">
                 <label id="reports-statuses-initial-checkbox">Statuses (<input type="checkbox" name="status_notin_check"><span class="label-text"><b>Not in)</b></span></label>
                 <select name="report_statuses" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="reports-statuses-initial-in-text">
                 </select>
