--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -4,8 +4,6 @@
       <div class="row">
         <div class="col-xs-12">
           <form role="form" method=post action="/eboa_nav/query-events">
-            <!-- Alert filters -->
-            {% include "eboa_nav/query_alerts_content.html" %}
             <!-- Sources -->
             <div class="row">
               <div class="col-xs-3">
@@ -194,6 +192,12 @@
                 <label>Limit</label>
                 <input type="text" class="form-control" style="width: 100%" name="limit" id="events-limit" value="100"/>
               </div>
+            </div>
+            <!-- Alert filters -->
+            <div class="row" style="margin-top: 12px" id="events-alert-filters">
+              {% with entity="event" %}
+              {% include "eboa_nav/query_alerts_content.html" %}
+              {% endwith %}
             </div>
             <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="events-submit-button" name="query_events">Query events</button>
