--- a/src/vboa/templates/eboa_nav/query_alerts_content.html
+++ b/src/vboa/templates/eboa_nav/query_alerts_content.html
@@ -1,10 +1,10 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">
-      <a data-toggle="collapse" data-parent="#accordion" href="#{{ entity }}-alert-filters">Specific filters for querying {{ entity }} alerts<span class="fa fa-angle-double-down"></span></a>
+      <a data-toggle="collapse" data-parent="#accordion" href="#{{ entity }}-specific-alert-filters">Specific filters for querying {{ entity }} alerts<span class="fa fa-angle-double-down"></span></a>
     </h3>
   </div>
-  <div class="panel-body panel-collapse collapse" id="{{ entity }}-alert-filters">
+  <div class="panel-body panel-collapse collapse" id="{{ entity }}-specific-alert-filters">
     <!-- Names -->
     <div class="row">
       <div class="col-xs-3">
@@ -54,7 +54,7 @@
       </div>
       <div class="col-xs-3">
         <label id="{{ entity }}-alerts-generators-in-checkbox">Generators (<input type="checkbox" name="alert_generator_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-        <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-{{ entity }}-alerts', 'generator', 20, 0)" id="{{ entity }}-alerts-generators-in-text"/><i class="circle"></i>
+        <input class="form-control" placeholder="Fill for searching items with exact matching" onkeyup="vboa.fill_elements_into_selector(this, '/eboa_nav/query-jsonify-{{ entity }}-alerts-by-generator', 'generator', 20, 0)" id="{{ entity }}-alerts-generators-in-text"/><i class="circle"></i>
         <select name="alert_generators" data-placeholder="Select several options..." size="4" hidden multiple="" tabidex="-1" id="{{ entity }}-alerts-generators-in-select">
         </select>
       </div>
@@ -64,12 +64,12 @@
       <div class="col-xs-3">
         <label>Ingestion time</label>
         <div class="input-group date">
-          <input type="text" class="form-control" name="alert_ingestion_time" id="{{ entity }}-alerts-ingestion-time-text"/>
+          <input type="text" class="form-control" name="alert_ingestion_time" id="ingestion-time-text"/>
           <span class="input-group-addon">
             <span class="glyphicon glyphicon-calendar"></span>
           </span>
           <div>
-            <select class="form-control" style="padding-left: 0" name="alert_ingestion_time_operator" id="{{ entity }}-alerts-ingestion-time-operator">
+            <select class="form-control" style="padding-left: 0" name="alert_ingestion_time_operator" id="ingestion-time-operator">
               {% include "eboa_nav/operators.html" %}
             </select>
           </div>
@@ -88,12 +88,12 @@
       <div class="col-xs-3">
           <label>Solved time</label>
           <div class="input-group date">
-            <input type="text" class="form-control"  name="alert_solved_time" id="{{ entity }}-alerts-solved-time-text"/>
+            <input type="text" class="form-control"  name="alert_solved_time" id="solved-time-text"/>
             <span class="input-group-addon">
               <span class="glyphicon glyphicon-calendar"></span>
             </span>
             <div>
-              <select class="form-control" style="padding-left: 0" name="alert_solved_time_operator" id="{{ entity }}-alerts-solved-time-operator">
+              <select class="form-control" style="padding-left: 0" name="alert_solved_time_operator" id="solved-time-operator">
                 {% include "eboa_nav/operators.html" %}
               </select>
             </div>
@@ -112,12 +112,12 @@
       <div class="col-xs-3">
           <label>Notification time</label>
           <div class="input-group date">
-            <input type="text" class="form-control"  name="alert_notification_time" id="{{ entity }}-alerts-notification-time-text"/>
+            <input type="text" class="form-control"  name="alert_notification_time" id="notification-time-text"/>
             <span class="input-group-addon">
               <span class="glyphicon glyphicon-calendar"></span>
             </span>
             <div>
-              <select class="form-control" style="padding-left: 0" name="alert_notification_time_operator" id="{{ entity }}-alerts-notification-time-operator">
+              <select class="form-control" style="padding-left: 0" name="alert_notification_time_operator" id="notification-time-operator">
                 {% include "eboa_nav/operators.html" %}
               </select>
             </div>
@@ -165,10 +165,10 @@
       </div>
     </div>
     <!-- Severities -->
-    <div class="row" id="{{ entity }}-alerts-severities-initial">
+    <div class="row">
       <div class="col-xs-3 query-alert-severities">
-        <label id="{{ entity }}-alerts-severities-initial-checkbox">Severities (<input type="checkbox" name="alert_severity_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-        <select name="alert_severities" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="{{ entity }}-alerts-severities-initial-in-text">
+        <label id="{{ entity }}-alerts-severities-in-checkbox">Severities (<input type="checkbox" name="alert_severities_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+        <select name="alert_severities" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="{{ entity }}-alerts-severities-in-select">
         </select>
       </div>
     </div>
