--- a/src/vboa/templates/eboa_nav/query_annotations_content.html
+++ b/src/vboa/templates/eboa_nav/query_annotations_content.html
@@ -146,6 +146,12 @@
                 <input type="text" class="form-control" style="width: 100%" name="limit" id="annotations-limit" value="100"/>
               </div>
             </div>
+            <!-- Specific alert filters -->
+            <div class="row" style="margin-top: 12px" id="annotations-specific-alert-filters">
+              {% with entity="annotation" %}
+              {% include "eboa_nav/query_alerts_content.html" %}
+              {% endwith %}
+            </div>
             <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="annotations-submit-button" name="query_annotations">Query annotations</button>
 	            <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="annotation-alerts-submit-button" name="query_annotation_alerts">Query annotation alerts</button>
