--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -193,8 +193,8 @@
                 <input type="text" class="form-control" style="width: 100%" name="limit" id="events-limit" value="100"/>
               </div>
             </div>
-            <!-- Alert filters -->
-            <div class="row" style="margin-top: 12px" id="events-alert-filters">
+            <!-- Specific alert filters -->
+            <div class="row" style="margin-top: 12px" id="events-specific-alert-filters">
               {% with entity="event" %}
               {% include "eboa_nav/query_alerts_content.html" %}
               {% endwith %}
