Fix some ids for testing

--- a/src/vboa/templates/eboa_nav/query_sources_content.html
+++ b/src/vboa/templates/eboa_nav/query_sources_content.html
@@ -166,10 +166,10 @@
               </div>
             </div>
             <!-- Statuses -->
-            <div class="row" id="sources-statuses-initial">
+            <div class="row">
               <div class="col-xs-3 query-source-statuses">
-                <label id="sources-statuses-initial-checkbox">Statuses (<input type="checkbox" name="status_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="source_statuses" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="sources-statuses-initial-in-text">
+                <label id="sources-statuses-in-checkbox">Statuses (<input type="checkbox" name="statuses_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="source_statuses" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="sources-statuses-in-select">
                 </select>
               </div>
             </div>
