--- a/src/vboa/templates/rboa_nav/query_reports_content.html
+++ b/src/vboa/templates/rboa_nav/query_reports_content.html
@@ -112,10 +112,10 @@
             </div>
             <div id="more-triggering-time-query-reports">
             </div>
-            <div class="row" id="reports-statuses-initial">
+            <div class="row">
               <div class="col-xs-3 query-report-statuses">
-                <label id="reports-statuses-initial-checkbox">Statuses (<input type="checkbox" name="status_notin_check"><span class="label-text"><b>Not in)</b></span></label>
-                <select name="report_statuses" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="reports-statuses-initial-in-text">
+                <label id="reports-statuses-in-checkbox">Statuses (<input type="checkbox" name="statuses_notin_check"><span class="label-text"><b>Not in)</b></span></label>
+                <select name="report_statuses" data-placeholder="Select several options..." class="chosen-select" multiple="" tabidex="-1" id="reports-statuses-in-select">
                 </select>
               </div>
             </div>
