--- a/src/vboa/templates/eboa_nav/query_events_content.html
+++ b/src/vboa/templates/eboa_nav/query_events_content.html
@@ -194,8 +194,8 @@
               </div>
             </div>
             <!-- Specific alert filters -->
-            <div class="row" style="margin-top: 12px" id="events-specific-alert-filters">
-              {% with entity="event" %}
+            <div class="panel-group" style="margin-top: 12px">
+              {% with entity="event", url_prefix="eboa_nav" %}
               {% include "eboa_nav/query_alerts_content.html" %}
               {% endwith %}
             </div>
