--- a/src/vboa/templates/eboa_nav/query_sources_content.html
+++ b/src/vboa/templates/eboa_nav/query_sources_content.html
@@ -226,6 +226,12 @@
                 <input type="text" class="form-control" style="width: 100%" name="limit" id="sources-limit" value="100"/>
               </div>
             </div>
+            <!-- Specific alert filters -->
+            <div class="panel-group" style="margin-top: 12px">
+              {% with entity="source", url_prefix="eboa_nav" %}
+              {% include "eboa_nav/query_alerts_content.html" %}
+              {% endwith %}
+            </div>
             <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="sources-submit-button" name="query_sources">Query sources</button>
 	            <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="source-alerts-submit-button" name="query_source_alerts">Query source alerts</button>
