--- a/src/vboa/templates/rboa_nav/query_reports_content.html
+++ b/src/vboa/templates/rboa_nav/query_reports_content.html
@@ -153,6 +153,12 @@
                 <input type="text" class="form-control" style="width: 100%" name="limit" id="reports-limit" value="100"/>
               </div>
             </div>
+            <!-- Specific alert filters -->
+            <div class="panel-group" style="margin-top: 12px">
+              {% with entity="report", url_prefix="rboa_nav" %}
+              {% include "eboa_nav/query_alerts_content.html" %}
+              {% endwith %}
+            </div>
             <div>
               <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="reports-submit-button" name="query_reports">Query reports</button>
 	            <button type="submit" class="btn btn-primary" style="margin-top: 12px" id="report-alerts-submit-button" name="query_report_alerts">Query report alerts</button>
